Fixed java 17 functions